--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
     <main id="ux-main-container" class="container">
         <img src="images/banner-educon.jpg" class="img-fluid" alt="banner-educon">
         <div id="ux-report-program-name" class="ux-section-title">
+            <!-- content replace -->
         </div>
-
         <section>
             <div>
                 <div class="ux-section-title">
@@ -221,31 +221,8 @@
                 <p>Algunos de los servicios de evaluación que pueden tener lugar durante el proceso podrían ser:</p>
 
                 <div id="ux-report-activities-container" class="container">
-
+                    <!-- content replace -->
                 </div>
-
-                <!--   <b>Evaluación con usuario / Pruebas de usabilidad</b>
-                <p>Las pruebas con usuarios reales son técnicas de evaluación de usabilidad tradicionalmente usadas en
-                    DCU. Se trata de pruebas realizadas en “laboratorio”, en las que se observa cómo un grupo de
-                    usuarios, reales o potenciales, lleva a cabo una serie de tareas encomendadas, para posteriormente
-                    realizar un análisis de los problemas de usabilidad con los que se han encontrado durante la prueba.
-                    Hassan (2004).</p>
-
-                <b>Pruebas generativas</b>
-                <p>Para identificar soluciones nuevas e innovadoras, debe definir el problema que está tratando de
-                    resolver. Esto requiere que usted entienda verdaderamente la vida, los entornos, los
-                    comportamientos, las actitudes / opiniones y las percepciones de las personas.</p>
-
-                <b>User persona</b>
-                <p>Persona se refiere a uno o unos personajes ficticios creados con motivo de representar a los
-                    usuarios posibles de un producto a través de una buena cantidad de investigaciones cualitativas y
-                    cuantitativas. Persona nos contesta la pregunta “¿Para quién diseñamos?” Es una herramienta poderosa
-                    basada en conclusiones de investigaciones en ayudar la creación de funciones de producto optimizando
-                    la investigación de UX. No sólo representa a algún usuario concreto sino al conjunto de ellos, se
-                    puede entender como el personaje típico de la conducta, la actitud, las habilidades y los contextos
-                    de todos los usuarios potenciales. Chang (2017).
-                </p> -->
-
             </div>
             <div>
                 <div class="ux-section-title">
@@ -299,7 +276,6 @@
                 <div class="container" id="ux-report-experts-container">
                     <!-- content replace -->
                 </div>
-
             </div>
 
             <div>
@@ -317,6 +293,7 @@
                     <b>
                         <h6>Valor del programa en pesos*</h6>
                     </b>
+                    
                     <p><span id="program-value-text"><!-- content replace --></span></p>
                     <em>* Mas 1,5% de impuesto procultura</em>
 
@@ -332,7 +309,7 @@
                 <ul>
                     <li>El cliente se compromete a facilitar los recursos técnicos, humanos y de información
                         necesarios para el desarrollo del proyecto.</li>
-                    <li> El cumplimiento de los tiempos estimados dependerá de la entrega oportuna de la información
+                    <li>El cumplimiento de los tiempos estimados dependerá de la entrega oportuna de la información
                         requerida, reuniones pactadas o de la retroalimentación de los procesos que a bien se
                         realicen.</li>
                     <li>La Universidad se compromete a velar por el tratamiento respetuoso de los derechos de autor
@@ -359,8 +336,8 @@
     </main>
     <br>
     <br>
-    <script src="main.js"></script>
     <script src="obtainData.js"></script>
+    <script src="main.js"></script>    
 </body>
 
 </html>
