New style base on @geninteractive recommendations

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     <br><br><br>
 
     <main id="ux-main-container" class="container">
-        <img src="images/banner-educon.jpg" class="img-fluid" alt="banner-educon">
+        <!-- <img src="images/banner-educon.jpg" class="img-fluid" alt="banner-educon"> -->
         <div id="ux-report-program-name" class="ux-section-title">
             <!-- content replace -->
         </div>
@@ -270,7 +270,7 @@
 
             <div>
                 <div class="ux-section-title">
-                    Facilitadores expertos
+                    VII. Facilitadores expertos
                 </div>
 
                 <div class="container" id="ux-report-experts-container">
@@ -280,7 +280,7 @@
 
             <div>
                 <div class="ux-section-title">
-                    VII. Inversión
+                    VIII. Inversión
                 </div>
                 <p>
                     En el modelo de diagnóstico se construye una cotización basada en las horas
@@ -293,7 +293,7 @@
                     <b>
                         <h6>Valor del programa en pesos*</h6>
                     </b>
-                    
+
                     <p><span id="program-value-text"><!-- content replace --></span></p>
                     <em>* Mas 1,5% de impuesto procultura</em>
 
@@ -302,7 +302,7 @@
 
             <div>
                 <div class="ux-section-title">
-                    VIII. Compromisos
+                    IX. Compromisos
                 </div>
                 <p> A continuación, se describen el conjunto de compromisos para la realización del presente proyecto
                 </p>
@@ -319,12 +319,11 @@
                         o revelar datos considerados como confidenciales.</li>
                 </ul>
 
-
             </div>
 
             <div>
                 <div class="ux-section-title">
-                    IX. Información de contacto
+                    X. Información de contacto
                 </div>
 
                 <div class="container" id="ux-report-commercial-container">
